--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,8 @@
             <img id="conticon" src="img/contacts.svg"></a></li>
           </ul>
 	    	<div data-role="content">
-            	<div id="output"></div>
+            	<h3>Your current location</h3>
+                <div id="output"></div>
           </div>
         </div>
 
@@ -55,7 +56,8 @@
             <img id="conticon" src="img/contacts.svg"></a></li>
           </ul>
 	    	<div data-role="content">
-            <p>Display a contact here</p>
+            <h3>Contact of the moment</h3>
+            <div id="displaycontact"></div>
           </div>
         </div>    
 	</div>
