--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,10 @@
     <div id="displaycontact"></div>
   </div>
 </div>
+
+<div data-role="footer" id="sticky">
+	<p>Made by Paul Harvey - copyright 2015</p>
+    </div>
     
     <script type="text/javascript" src="js/index.js"></script>
   </body>
