--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
             <h3>Paul Harvey &copy;2015</h3>
         </div>
     	<script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/hammer.min.js"></script>
+        <script type="text/javascript" src="js/hammer.js"></script>
     	<script type="text/javascript" src="js/index.js"></script>
 	</body>
 
